    - IExportable::ExportResultFlags added. Return values on export and import functions are now using these flags. A search and replace for IExportable::Result with IExportable::ExportResultFlags will fix any compile time errors.
    - IActionProvider and ActionProvider implementation's find action functions improved to use Qt::MatchFlags and to return a list of all found actions.

    ============================
    QtilitiesExtensionSystem:
    ============================
    - Improved error message when a plugin could not be loaded on Linux.
    - Added documentation showing how to check for core plugins when an application starts.

    ============================
    QtilitiesProjectManagement:
    ============================
    - IProject now has the ability to receive a task to which open, close and save operations should log their messages.
    - Project related tasks now have proper logs.

    ============================
    QtilitiesTesting:
    ============================
    - Extended exporting unit tests in order to test new Qtilities::Qtilities_1_1 export version on all classes for which the export version changed.

    ============================
    Plugins:
    ============================
    - Added Help plugin.

    ============================
    Examples:
    ============================
    - Object Management Example:
        - Fixed the object management mode not showing anymore.
    - Tree Building Example:
        - Much improved, now shows different trees under seperate tabs.


================================
Qtilities v1.0 Changes
================================
    General:
    ============================
    - Source Repository
        - The source repository was moved from Gitorious to GitHub.
    - Documentation
        - Documentation now uses Doxygen's COLORSTYLE parameters to style the docs properly.
        - Getting Started article improved and updated, especially the Linux information.