@@ -114,9 +114,6 @@ Qtilities::ExtensionSystem::ExtensionSystemCore::ExtensionSystemCore(QObject* pa
     d->plugins.displayHints()->setHierarchicalDisplayHint(ObserverHints::CategorizedHierarchy);
 
     d->plugins.endProcessingCycle();
-    QDir dir(QtilitiesApplication::applicationSessionPath() + QDir::separator() + "Plugins");
-    dir.mkpath(QtilitiesApplication::applicationSessionPath() + QDir::separator() + "Plugins");
-    d->active_configuration_file = QtilitiesApplication::applicationSessionPath() + QDir::separator() + "Plugins" + QDir::separator() +  "default" + qti_def_SUFFIX_PLUGIN_CONFIG;
 }
 
 Qtilities::ExtensionSystem::ExtensionSystemCore::~ExtensionSystemCore()
@@ -127,6 +124,10 @@ Qtilities::ExtensionSystem::ExtensionSystemCore::~ExtensionSystemCore()
 }
 
 void Qtilities::ExtensionSystem::ExtensionSystemCore::initialize() {
+    QDir dir(QtilitiesApplication::applicationSessionPath() + QDir::separator() + "Plugins");
+    dir.mkpath(QtilitiesApplication::applicationSessionPath() + QDir::separator() + "Plugins");
+    d->active_configuration_file = QtilitiesApplication::applicationSessionPath() + QDir::separator() + "Plugins" + QDir::separator() +  "default" + qti_def_SUFFIX_PLUGIN_CONFIG;
+
     // Start a processing cycle on the actions observer. Otherwise it will refresh the actions view everytime
     // an action is added in a plugin.
     ACTION_MANAGER->commandObserver()->startProcessingCycle();
